emby/emby-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emby-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emby
  template:
    metadata:
      labels:
        app: emby
    spec:
      nodeSelector:
        nodename: raspmain
      containers:
      - image: emby/embyserver_arm64v8:4.9.0.21
        name: emby
        ports:
        - containerPort: 8096
        volumeMounts:
        - mountPath: /mnt/share
          name: emby-pv-storage
      volumes:
      - name: emby-pv-storage
        persistentVolumeClaim:
          claimName: emby-pv-claim
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
