emby/emby-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emby-service
spec:
  type: ClusterIP
  selector:
    app: emby
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8096
